--- a/L2C-ACM/email.htm
+++ b/L2C-ACM/email.htm
@@ -1,5 +1,14 @@
+<html>
+<head>
+	<title>
+		</title>
+
+</head>
+<body>
+<!---Sarthak Gupta--->
+
 <div class="m_-3937255714627606682content" style="box-sizing:border-box;color:black;display:block;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-size:19px;font-weight:normal;line-height:1.7;margin:0 auto;max-width:600px;padding-bottom:0">
-    <div style="background-color:rgb(239, 91, 98); padding: 15px">
+    <div style="background-color:rgb(91, 221, 94); padding: 15px">
     <table class="m_-3937255714627606682main" width="100%" cellpadding="0" cellspacing="0" 
         style="background:#ffffff;
             box-sizing:border-box;
@@ -20,7 +29,7 @@
                 display: flex;
                 border-bottom: 2px solid #c3c3c3;">
                     <div style="display: block; padding-bottom: 18px; cursor: pointer; width: 100%">
-                        <img style=" height: auto;max-width:350px;width: 100%; margin:auto" src="https://awasthishubh.github.io/logos/l2c/LTC.png" alt="logo">
+                        <img style=" height: auto;max-width:350px;width: 100%; margin:auto" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/PNGBLACK.png" alt="logo">
                     </div>
 				</div>
 			</td>
@@ -38,15 +47,15 @@
                             <div style="text-align: center;padding: 18px 0px;line-height: 23px; ">
 								<div style="font-size: 17.5px;margin: 10px">
 									<img style="height: 24px;vertical-align: bottom;" src="https://materialdesignicons.com/api/download/A566BA98-D35A-443F-AD31-0D31EF0B85EC/000000/1/FFFFFF/0/36">
-									  2nd September 2018 (Sunday)
+									  21th September to 22th September
 								</div>
 								<div style="font-size: 17.5px;margin: 10px">
 									<img style="height: 24px;  vertical-align: sub;" src="https://materialdesignicons.com/api/download/E3A4F70D-92EF-4115-BBB3-3BE68A788F5D/000000/1/FFFFFF/0/36">
-									  9:00:00 AM
+									  16:00 to 00:00
 								</div>
 								<div style="font-size: 17.5px; margin: 10px">
 									<img style="height: 24px; vertical-align: sub;" src="https://materialdesignicons.com/api/download/D3A1EC2E-98D5-46B6-BF33-DECBBAACEFBE/000000/1/FFFFFF/0/36">
-									  2nd floor, Technology Tower (VIT Vellore)
+									  HOMI BHABA GALLERY
                                 </div>
                         </div>
 
@@ -74,16 +83,16 @@ Let us know if you are willing to join hands by sponsoring our problem statement
                 " align="center" bgcolor="#F5F5F5" valign="top">
                 <div style="max-width: 300px; display: block; margin: auto;">
 	                <a target="VIT" style="display: inline-block; width: 60%;padding-right: 6%;" href="http://vit.ac.in/">
-	                    <img style=" height: auto;width: 100%; " src="https://awasthishubh.github.io/logos/l2c/vit.png" alt="logo">
+	                    <img style=" height: auto;width: 100%; " src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/vit.png" alt="logo">
 	                </a>
 	                <a target="GRAVITAS" style="display: inline-block; width: 25%; padding-left: 6%" href="http://www.vit.ac.in/files/gravitas18/">
-	                    <img style=" height: auto;width: 100%;" src="https://awasthishubh.github.io/logos/l2c/logo.png" alt="logo">
+	                    <img style=" height: auto;width: 280%;" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/logo.png" alt="logo">
 	                </a>
 	                <a target="ACM" style="display: inline-block; width: 60%;padding-right: 6%;" href="https://acmvit.in/">
-	                    <img style=" height: auto;width: 100%;" src="https://awasthishubh.github.io/logos/l2c/acm_logo-04.png" alt="logo">
+	                    <img style=" height: auto;width: 100%;" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/acm.png" alt="logo">
 	                </a>
 					<a style="display: inline-block; width: 25%;padding-left: 6%;" href="#">
-	                    <img style=" height: auto;width: 100%;"  src="https://awasthishubh.github.io/logos/l2c/valeo%20logo.png" alt="logo">
+	                    <img style=" height: auto;width: 100%;"  src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/auto.png" alt="logo">
 	                </a>
 	            </div>
             </td>
@@ -91,3 +100,5 @@ Let us know if you are willing to join hands by sponsoring our problem statement
     </tbody></table> 
     </div>
 </div>
+</body>
+</html>
