--- a/L2C-ACM/email.htm
+++ b/L2C-ACM/email.htm
@@ -8,7 +8,7 @@
 <!---Sarthak Gupta--->
 
 <div class="m_-3937255714627606682content" style="box-sizing:border-box;color:black;display:block;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-size:19px;font-weight:normal;line-height:1.7;margin:0 auto;max-width:600px;padding-bottom:0">
-    <div style="background-color:rgb(91, 221, 94); padding: 15px">
+    <div style="background-color:rgb(231,52,39); padding: 15px">
     <table class="m_-3937255714627606682main" width="100%" cellpadding="0" cellspacing="0" 
         style="background:#ffffff;
             box-sizing:border-box;
@@ -29,7 +29,7 @@
                 display: flex;
                 border-bottom: 2px solid #c3c3c3;">
                     <div style="display: block; padding-bottom: 18px; cursor: pointer; width: 100%">
-                        <img style=" height: auto;max-width:350px;width: 100%; margin:auto" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/PNGBLACK.png" alt="logo">
+                        <img style=" height: auto;max-width:350px;width: 100%; margin:auto" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/mlh.png" alt="logo">
                     </div>
 				</div>
 			</td>
@@ -42,28 +42,36 @@
                             font-size:17px;line-height:1.7;margin:0 auto;padding:20px 0;vertical-align:top;
                             line-height: 24px;" valign="top">
                             <div style="text-align: justify">
-                            Greetings,<br>
-								We are from ACM VIT, a student body that originates from its parent branch ACM international which is a global scientific and educational organization that represents the computing community.</div>
+							Greetings from ACM-VIT!,<br>
+
+							We are excited to announce our upcoming event Local Hack Day Build powered by Major League Hacking (MLH). All coders, developers, designers and pitchers are invited to attend our informative event.</div>
                             <div style="text-align: center;padding: 18px 0px;line-height: 23px; ">
 								<div style="font-size: 17.5px;margin: 10px">
 									<img style="height: 24px;vertical-align: bottom;" src="https://materialdesignicons.com/api/download/A566BA98-D35A-443F-AD31-0D31EF0B85EC/000000/1/FFFFFF/0/36">
-									  21th September to 22th September
+									  8<sup>Th</sup> December
 								</div>
 								<div style="font-size: 17.5px;margin: 10px">
 									<img style="height: 24px;  vertical-align: sub;" src="https://materialdesignicons.com/api/download/E3A4F70D-92EF-4115-BBB3-3BE68A788F5D/000000/1/FFFFFF/0/36">
-									  16:00 to 00:00
+									  09:00 to 19:00
 								</div>
 								<div style="font-size: 17.5px; margin: 10px">
 									<img style="height: 24px; vertical-align: sub;" src="https://materialdesignicons.com/api/download/D3A1EC2E-98D5-46B6-BF33-DECBBAACEFBE/000000/1/FFFFFF/0/36">
-									  HOMI BHABA GALLERY
+									  Shakespeare's Gallery
                                 </div>
                         </div>
 
 								<div style="text-align: justify">
-								As we plan for the upcoming workshop, we seek to support and partnership from companies like yours without which the successful orchestration of a grand workshop is next to impossible. We are looking forward to monetary support from your end and in return we promise a promotion of all your initiatives and ventures amongst a huge student crowd. It is an open invitation from our end if you want to introduce your own track for L2C and in return, it would be great publicity for your company.
-
-Let us know if you are willing to join hands by sponsoring our problem statements with us and hence raise the bar of this endeavor of ours. For more information refer to the sponsorship brochure attached to the mail.</div>
-						</td>
+										Students are requested to register for the MLH Local Hack Day and use this opportunity to learn the tips and tricks to win hackathons from previous victors themselves!</div>
+								<div style="text-align: center">
+									<br><b>Register at:</b><a href="https://my.mlh.io/users/register">https://my.mlh.io/users/register</a>
+									<br>
+									<br>
+								</div>
+								<a target="ACM" style="display: inline-block; width: 60%;padding-right: 6%;" href="">
+									<img style=" height:auto;width: 40%; margin:0 0 0 60%" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/qrcode.png" alt="logo">
+							   </a>
+							   
+							</td>
 					</tr>
 				</tbody></table>
 			</td>
@@ -86,13 +94,10 @@ Let us know if you are willing to join hands by sponsoring our problem statement
 	                    <img style=" height: auto;width: 100%; " src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/vit.png" alt="logo">
 	                </a>
 	                <a target="GRAVITAS" style="display: inline-block; width: 25%; padding-left: 6%" href="http://www.vit.ac.in/files/gravitas18/">
-	                    <img style=" height: auto;width: 280%;" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/logo.png" alt="logo">
+	                    <img style=" height: auto;width: 150%;" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/mlh.png" alt="logo">
 	                </a>
 	                <a target="ACM" style="display: inline-block; width: 60%;padding-right: 6%;" href="https://acmvit.in/">
-	                    <img style=" height: auto;width: 100%;" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/acm.png" alt="logo">
-	                </a>
-					<a style="display: inline-block; width: 25%;padding-left: 6%;" href="#">
-	                    <img style=" height: auto;width: 100%;"  src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/auto.png" alt="logo">
+	                     <img style=" height:auto;width: 110%; " src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/acm.png" alt="logo">
 	                </a>
 	            </div>
             </td>
