--- a/L2C-ACM/email.htm
+++ b/L2C-ACM/email.htm
@@ -29,7 +29,7 @@
                 display: flex;
                 border-bottom: 2px solid #c3c3c3;">
                     <div style="display: block; padding-bottom: 18px; cursor: pointer; width: 100%">
-                        <img style=" height: auto;max-width:350px;width: 100%; margin:auto" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/mlh.png" alt="logo">
+                        <img style=" height: auto;max-width:300px;width: 90%; margin:auto" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/mlh.png" alt="logo">
                     </div>
 				</div>
 			</td>
@@ -63,12 +63,12 @@
 								<div style="text-align: justify">
 										Students are requested to register for the MLH Local Hack Day and use this opportunity to learn the tips and tricks to win hackathons from previous victors themselves!</div>
 								<div style="text-align: center">
-									<br><b>Register at:</b><a href="https://my.mlh.io/users/register">https://my.mlh.io/users/register</a>
+									<br><b>Register at:</b><a href="https://localhackday.mlh.io/build/locations/2787">https://localhackday.mlh.io/build/locations/2787</a>
 									<br>
 									<br>
 								</div>
 								<a target="ACM" style="display: inline-block; width: 60%;padding-right: 6%;" href="">
-									<img style=" height:auto;width: 40%; margin:0 0 0 60%" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/qrcode.png" alt="logo">
+									<img style=" height:auto;width: 40%; margin:0 0 0 60%" src="https://sarthakg04.github.io/ACM-L2C19/L2C-ACM/qrcode1.png" alt="logo">
 							   </a>
 							   
 							</td>
